Fix recent searches alignment to right in RTL layout
Use margin-inline-end: auto to push container to the right (start) side.

--- a/src/components/RecentSearches.module.css
+++ b/src/components/RecentSearches.module.css
@@ -3,7 +3,7 @@
   max-width: 500px;
   margin-top: 24px;
   text-align: right;
-  align-self: flex-end;
+  margin-inline-end: auto;
 }
 
 .label {
